# bohicalog

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  MANIFEST.in  demo.py  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: basic_usage.rst  bohicalog_module.rst  conf.py  handlers_module.rst  index.rst  usage.rst
docs/source/_examples/: basic_example.py  telegram_example.py
docs/source/develop/: cicd.rst  workflow.rst
docs/source/usages/: telegram_usage.rst
requirements/: dev.txt  docs.txt  prod.txt  test.txt
src/bohicalog/: __init__.py  colors.py  version.py
src/bohicalog/cli/: cli.py
src/bohicalog/cli/handlers/telegram/: commands.py
src/bohicalog/handlers/telegram/: __init__.py  buffer.py  consts.py  formatters.py  handler.py  temp.py  utils.py
