##########################
# Setup.py Configuration #
##########################
[metadata]
name = bohicalog
version = 0.0.1-dev
description = The BOHICA Logging Library provides a configured logger for you module or application
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/BOHICA-Labs/bohicalog
download_url = https://github.com/BOHICA-Labs/bohicalog/releases
project_urls =
    Bug Tracker = https://github.com/BOHICA-Labs/bohicalog/issues
    Source Code = https://github.com/BOHICA-Labs/bohicalog

# Author information
author = Joshua Magady
author_email = josh.magady@gmail.com
maintainer = Joshua Magady
maintainer_email = josh.magady@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    # TODO add your own free-text keywords

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # TODO your requirements go here
    colorama ==0.4.4 ;sys_platform=="win32"

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext
dev =
    %(tests)s
    %(docs)s
    pre-commit
    tox
    bump2version
    twine
    wheel
    # TODO add your own dev requirements here


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bohicalog
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/bohicalog
    .tox/*/lib/python*/site-packages/bohicalog

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == __main__:
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301,
    S403,
    S404,
    S603,
    W503,
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    bohicalog
    tests
